// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable iOS. Snapshots. should match default props. 1`] = `
Object {
  "borderRadius": 0,
  "rippleColor": "#44BBA4",
}
`;

exports[`Touchable iOS. Snapshots. should match when border radius is changed 1`] = `
<TouchableWithoutFeedback>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 50,
        },
      ]
    }
  >
    <Text>
      Test Button
    </Text>
  </View>
</TouchableWithoutFeedback>
`;

exports[`Touchable iOS. Snapshots. should match with default props provided. 1`] = `
<TouchableWithoutFeedback>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  >
    <Text>
      Test Button
    </Text>
  </View>
</TouchableWithoutFeedback>
`;
